<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
    

    
    
   <Button 
    android:id="@+id/mylistview_btn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/s_mylistview_btn"
    />
    
    
    
    <Button 
    android:id="@+id/simpleCursorAdapter_btn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/s_simpleCursorAdapter_btn"
    />
    
    <Button 
    android:id="@+id/simpleAdapter_btn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/s_simpleAdapter_btn"
    />
    
    <Button 
    android:id="@+id/myAdapter_btn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/s_myAdapter_btn"
    />
    
    
    
</LinearLayout>
